# NexusAI

./: .gitignore  DESIGN_AUDIT.md  README.md
.agents/: AGENTS.md
backend/: .env  pyproject.toml
backend/app/: dependencies.py  main.py
backend/app/api/: router.py
backend/app/api/v1/: chats.py  documents.py  health.py
backend/app/core/: config.py  database.py
backend/app/embeddings/: __init__.py  chroma_store.py  local_embedding.py
backend/app/generation/: rag_generator.py
backend/app/ingestion/: __init__.py
backend/app/ingestion/chunkers/: __init__.py  recursive_chunker.py
backend/app/ingestion/extractors/: __init__.py  pdf_extractor.py
backend/app/ingestion/storage/: __init__.py  local_storage.py
backend/app/llm/: openai_client.py  openai_stream.py
backend/app/models/: base.py  conversation.py  document.py  user.py
backend/app/ports/: __init__.py  chunker.py  embedding.py  extractor.py  llm.py  llm_client.py  storage.py  streaming_llm.py  vector_store.py
backend/app/prompt/: prompt_builder.py  templates.py
backend/app/repositories/: __init__.py  conversation_repository.py  document_repository.py  message_repository.py
backend/app/schemas/: __init__.py  chat.py  document.py
backend/app/services/: __init__.py  chat_service.py  document_service.py  streaming_chat_service.py
backend/app/streaming/: token_stream.py
backend/scratch/: test_models.py  verify_generation.py  verify_persistence.py  verify_rag.py  verify_streaming.py
backend/scripts/: create_tables.py
designs/: DESIGN.md
docs/: GLOSSARY.md  HANDBOOK.md
(+38 files in other folders)
